--- a/publications.html
+++ b/publications.html
@@ -76,12 +76,13 @@
  <h1>Preprints/Recent Publications</h1>
  <ol>
 
-  <li> Jinhyun So, Basak Guler, A. Salman Avestimehr, A Scalable Approach for Privacy-Preserving Collaborative Machine Learning, Conference on Neural Information Processing Systems, NeurIPS 2020. </li>       
+
+   <li> Jinhyun So, Basak Guler, A. Salman Avestimehr, &nbsp;<a href="https://arxiv.org/abs/2007.11115">BREA: Byzantine-Resilient Secure Federated Learning</a>, IEEE Journal in Selected Areas in Communications: Machine Learning in Communications and Networks, accepted Oct. 2020. </li>       
   <br />
 
-   <li> Jinhyun So, Basak Guler, A. Salman Avestimehr, &nbsp;<a href="https://arxiv.org/abs/2007.11115">BREA: Byzantine-Resilient Secure Federated Learning</a>, available on arXiv:2007.11115. </li>       
+  <li> Jinhyun So, Basak Guler, A. Salman Avestimehr, A Scalable Approach for Privacy-Preserving Collaborative Machine Learning, Conference on Neural Information Processing Systems (NeurIPS 2020). </li>       
   <br />
-  
+   
    <li> Jinhyun So, Basak Guler, A. Salman Avestimehr, &nbsp;<a href="https://arxiv.org/pdf/2002.04156.pdf">Turbo-Aggregate: Breaking the Quadratic Aggregation Barrier in Secure Federated Learning</a>, available on arXiv:2002.04156v2. </li>       
   <br />
   
@@ -101,6 +102,9 @@
  <h1>Journal Publications</h1>
  <ol>
  
+    <li> Jinhyun So, Basak Guler, A. Salman Avestimehr, &nbsp;<a href="https://arxiv.org/abs/2007.11115">BREA: Byzantine-Resilient Secure Federated Learning</a>, IEEE Journal in Selected Areas in Communications: Machine Learning in Communications and Networks, accepted Oct. 2020. </li>       
+  <br />
+   
   <li> Basak Guler, A. Salman Avestimehr, Antonio Ortega, &nbsp;<a href="BG-TSIPN-20.pdf">TACC: Topology-Aware Coded Computing for Distributed Graph Processing</a>, IEEE Transactions on Signal and Information Processing over Networks, vol. 6, pp. 508-525, May 2020.   </li>
   <br /> 
   
