--- a/research.html
+++ b/research.html
@@ -56,7 +56,7 @@
 					<li><a href="bio.html"style="color: MidnightBlue">Bio</a></li>
 					<li><a href="research.html"style="color: MidnightBlue">Research</a></li>
 					<li><a href="publications.html"style="color: MidnightBlue">Publications</a></li>					
-					<li><a href="personal.html"style="color: MidnightBlue">Personal</a></li>
+					<li><a href="teaching.html"style="color: MidnightBlue">Teaching</a></li>
 				</ul>
 			</div> <!-- secondaryNavigation -->		
 	</div> <!-- firstColumn -->
@@ -99,8 +99,8 @@ Our experiments demonstrate that Turbo-aggregate achieves a total running time t
 <p style="text-align:justify"> <b>Related publications:</b> <br /></p >
 
 
-<p style="text-align:justify">Jinhyun So, Basak Guler, A. Salman Avestimehr, &nbsp;<a href="https://arxiv.org/pdf/2002.04156.pdf">Turbo-Aggregate: Breaking the Quadratic Aggregation Barrier in Secure Federated Learning</a>, available on arXiv:2002.04156v2. </p >
-<p style="text-align:justify">Jinhyun So, Basak Guler, A. Salman Avestimehr, &nbsp;<a href="https://arxiv.org/abs/2007.11115">BREA: Byzantine-Resilient Secure Federated Learning</a>, available on arXiv:2007.11115. </p >    
+<p style="text-align:justify">Jinhyun So, Basak Guler, A. Salman Avestimehr, &nbsp;<a href="https://arxiv.org/pdf/2002.04156.pdf">Turbo-Aggregate: Breaking the Quadratic Aggregation Barrier in Secure Federated Learning</a>, IEEE Journal on Selected Areas in Information Theory: Privacy and Security of Information Systems, 2021. </p >
+<p style="text-align:justify">Jinhyun So, Basak Guler, A. Salman Avestimehr, &nbsp;<a href="https://arxiv.org/abs/2007.11115">BREA: Byzantine-Resilient Secure Federated Learning</a>, IEEE Journal in Selected Areas in Communications: Machine Learning in Communications and Networks, 2020. </p >    
 
 
 
@@ -134,9 +134,9 @@ Experimental evaluations for image classification on the Amazon EC2 cloud demons
 
 <p style="text-align:justify"> <b>Related publications:</b> <br /></p >
 
-<p style="text-align:justify">Jinhyun So, Basak Guler, A. Salman Avestimehr, A Scalable Approach for Privacy-Preserving Collaborative Machine Learning, Conference on Neural Information Processing Systems, NeurIPS 2020. </p >       
+<p style="text-align:justify">Jinhyun So, Basak Guler, A. Salman Avestimehr, &nbsp;<a href="https://papers.nips.cc/paper/2020/file/5bf8aaef51c6e0d363cbe554acaf3f20-Paper.pdf">A Scalable Approach for Privacy-Preserving Collaborative Machine Learning</a>, Conference on Neural Information Processing Systems, NeurIPS 2020. </p >       
 
-<p style="text-align:justify">Jinhyun So, Basak Guler, A. Salman Avestimehr, and Payman Mohassel, &nbsp;<a href="https://arxiv.org/pdf/1902.00641.pdf">CodedPrivateML: A Fast and Privacy-Preserving Framework for Distributed Machine Learning</a>, available on arXiv:1902.00641. </p >       
+<p style="text-align:justify">Jinhyun So, Basak Guler, A. Salman Avestimehr, &nbsp;<a href="https://arxiv.org/pdf/1902.00641.pdf">CodedPrivateML: A Fast and Privacy-Preserving Framework for Distributed Machine Learning</a>, IEEE Journal on Selected Areas in Information Theory: Privacy and Security of Information Systems, 2021. </p >       
  
 
    </p >
@@ -190,11 +190,11 @@ Distributed computing provides an effective means of scaling-up large-scale grap
 
 
 
-        <h1><b>Context-Aware Multi-User Communication Architectures</b></h1>
+        <h1><b>Network Information Theory</b></h1>
 <br />
 
 <p style="text-align:justify"> 
-Another focus of my research is understanding the information-theoretic performance limits of context-aware  communication networks. 
+Another focus of my research is understanding the information-theoretic performance limits of multi-user context-aware  communication networks. 
 This is inspired by scenarios in which 
 interacting parties are influenced by side information while interpreting the messages, such as external information resources or knowledge bases representing the unique backgrounds, characteristics, or biases. To do so, my research explores the fundamental limits of the amount of information that can be transferred with a fidelity criterion in a multi-user communication network when interacting parties have access to side information. 
 
@@ -231,7 +231,7 @@ interacting parties are influenced by side information while interpreting the me
 
 <br /> 
 
-<h1><b>Semantics-Aware Information Transfer in the Physical Layer </b></h1>
+<h1><b>Semantic Communication </b></h1>
 <br />
 <p style="text-align:justify"> 
 Emerging networks such as the Internet of Things (IoT) are designed to facilitate the interaction of humans with intelligent machines. These networks consist of actors with possibly different <b>characteristics</b>, <b>goals</b>, and <b>interests</b>. Such differences can in turn lead to various interpretations of the received information. I design networks that operate under such ambiguous environments, by leveraging the semantic and social features of information transmission. Unlike conventional communication networks, this necessitates taking into account the personal background and characteristics of the interacting parties. 
