--- a/index.html
+++ b/index.html
@@ -102,6 +102,10 @@
 
 		<p style="text-align:justify">
 
+	<p style="text-align:justify"><font color="purple"><b> April 2021: </b></font> Our paper on sustainable/green AI &nbsp;<a href="https://arxiv.org/pdf/2102.05639.pdf">Energy Harvesting Distributed Machine Learning</a> has been accepted to IEEE Intenational Symposium on Information Theory!</p>
+		
+	 <p>
+	
 	<p style="text-align:justify"><font color="purple"><b> January 2021: </b></font> Our paper &nbsp;<a href="https://arxiv.org/pdf/2002.04156.pdf">Turbo-Aggregate: Breaking the Quadratic Aggregation Barrier in Secure Federated Learning</a> has been accepted to IEEE Journal on Selected Areas in Information Theory: Privacy and Security of Information Systems</p>
 		
 	 <p>
