--- a/publications.html
+++ b/publications.html
@@ -76,6 +76,8 @@
  <h1>Preprints/Recent Publications</h1>
  <ol>
 
+   <li> Basak Guler, Aylin Yener, &nbsp;<a href="https://arxiv.org/pdf/2102.05639.pdf">Energy Harvesting Distributed Machine Learning</a>, IEEE International Symposium on Information Theory, 2021. </li>       
+  <br />
 
    <li> Jinhyun So, Basak Guler, A. Salman Avestimehr, &nbsp;<a href="https://arxiv.org/abs/2007.11115">BREA: Byzantine-Resilient Secure Federated Learning</a>, IEEE Journal in Selected Areas in Communications: Machine Learning in Communications and Networks, 2020. </li>       
   <br />
@@ -140,6 +142,10 @@
                      
   <h1>Conference Publications</h1>
           <ol>
+
+   <li> Basak Guler, Aylin Yener, &nbsp;<a href="https://arxiv.org/pdf/2102.05639.pdf">Energy Harvesting Distributed Machine Learning</a>, IEEE International Symposium on Information Theory, 2021. </li>       
+  <br />
+
 
   <li> Jinhyun So, Basak Guler, A. Salman Avestimehr, &nbsp;<a href="https://papers.nips.cc/paper/2020/file/5bf8aaef51c6e0d363cbe554acaf3f20-Paper.pdf">A Scalable Approach for Privacy-Preserving Collaborative Machine Learning</a>, Conference on Neural Information Processing Systems (NeurIPS 2020). </li>       
   <br />
