--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
 		<p style="text-align:justify">
 
-	<p style="text-align:justify"><font color="purple"><b> April 2021: </b></font> Our paper on sustainable/green AI &nbsp;<a href="https://arxiv.org/pdf/2102.05639.pdf">Energy Harvesting Distributed Machine Learning</a> has been accepted to IEEE Intenational Symposium on Information Theory!</p>
+	<p style="text-align:justify"><font color="purple"><b> April 2021: </b></font> Our paper on sustainable/green AI &nbsp;<a href="https://arxiv.org/pdf/2102.05639.pdf">Energy Harvesting Distributed Machine Learning</a> has been accepted to IEEE International Symposium on Information Theory</p>
 		
 	 <p>
 	
