--- a/index.html
+++ b/index.html
@@ -103,6 +103,10 @@
 		<p style="text-align:justify">
 
 
+	<p style="text-align:justify"><font color="purple"><b> June 2021: </b></font> New paper on privacy-preserving federated learning! &nbsp;<a href="https://arxiv.org/pdf/2106.03328.pdf">Securing Secure Aggregation: Mitigating Multi-Round Privacy Leakage in Federated Learning</a></p>
+		
+	 <p>
+
 	<p style="text-align:justify"><font color="purple"><b> April 2021: </b></font> Our paper on sustainable/green AI &nbsp;<a href="https://arxiv.org/pdf/2102.05639.pdf">Energy Harvesting Distributed Machine Learning</a> has been accepted to IEEE International Symposium on Information Theory!</p>
 		
 	 <p>
@@ -138,7 +142,7 @@
   <p style="text-align:justify"><font color="purple"><b> May 2020: </b></font>  New paper on distributed graph processing: &nbsp;<a href="BG-TSIPN-20.pdf">TACC: Topology-Aware Coded Computing for Distributed Graph Processing</a></li>
   
   <p>  
-  New paper on privacy-aware distributed machine learning: &nbsp;<a href="https://arxiv.org/pdf/1902.00641.pdf">CodedPrivateML: A Fast and Privacy-Preserving Framework for Distributed Machine Learning</a> </li>       
+  <p style="text-align:justify"><font color="purple"><b> April 2020: </b></font>   New paper on privacy-aware distributed machine learning: &nbsp;<a href="https://arxiv.org/pdf/1902.00641.pdf">CodedPrivateML: A Fast and Privacy-Preserving Framework for Distributed Machine Learning</a> </li>       
 
 		
 		  
