--- a/publications.html
+++ b/publications.html
@@ -76,6 +76,10 @@
  <h1>Preprints/Recent Publications</h1>
  <ol>
 
+   <li> Jinhyun So, Ramy E. Ali, Basak Guler, Jiantao Jiao, A. Salman Avestimehr, &nbsp;<a href="https://arxiv.org/pdf/2106.03328.pdf">Securing Secure Aggregation: Mitigating Multi-Round Privacy Leakage in Federated Learning</a>, 2021. </li>       
+  <br />
+
+
    <li> Basak Guler, Aylin Yener, &nbsp;<a href="https://arxiv.org/pdf/2102.05639.pdf">Energy Harvesting Distributed Machine Learning</a>, IEEE International Symposium on Information Theory, 2021. </li>       
   <br />
 
