--- a/research.html
+++ b/research.html
@@ -72,7 +72,7 @@
 
 
 
-<h1><b> Machine Learning in Wireless Networks </b></h1>
+<h1><b> Machine Learning in Wireless Networks, Federated Learning </b></h1>
 <br />
 <p style="text-align:justify"> 
 Federated learning is a distributed learning framework that allows machine learning in mobile environments, while protecting user privacy and providing robustness against user dropouts. 
@@ -98,7 +98,7 @@ Our experiments demonstrate that Turbo-aggregate achieves a total running time t
 
 <p style="text-align:justify"> <b>Related publications:</b> <br /></p >
 
-
+<p style="text-align:justify">Jinhyun So, Basak Guler, Ramy E. Ali, Jiantao Jiao, A. Salman Avestimehr, &nbsp;<a href="https://arxiv.org/pdf/2106.03328.pdf">Securing Secure Aggregation: Mitigating Multi-Round Privacy Leakage in Federated Learning</a>, 2021. </p >    
 <p style="text-align:justify">Jinhyun So, Basak Guler, A. Salman Avestimehr, &nbsp;<a href="https://arxiv.org/pdf/2002.04156.pdf">Turbo-Aggregate: Breaking the Quadratic Aggregation Barrier in Secure Federated Learning</a>, IEEE Journal on Selected Areas in Information Theory: Privacy and Security of Information Systems, 2021. </p >
 <p style="text-align:justify">Jinhyun So, Basak Guler, A. Salman Avestimehr, &nbsp;<a href="https://arxiv.org/abs/2007.11115">BREA: Byzantine-Resilient Secure Federated Learning</a>, IEEE Journal in Selected Areas in Communications: Machine Learning in Communications and Networks, 2020. </p >    
 
