--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <title> Basak Guler</title>
-<link href="styles/reset.css" rel="stylesheet" type="text/css" />
-<link href="styles/generic.css" rel="stylesheet" type="text/css" />
-<link href="styles/electrical.css" rel="stylesheet" type="text/css" />
+<link href="https://basakguler.github.io/styles/reset.css" rel="stylesheet" type="text/css" />
+<link href="https://basakguler.github.io/styles/generic.css" rel="stylesheet" type="text/css" />
+<link href="https://basakguler.github.io/styles/electrical.css" rel="stylesheet" type="text/css" />
 
 </head>
 
@@ -52,11 +52,11 @@
 			<div id="secondaryNavigation">
 			
 				<ul> 
-					<li><a href="index.html"style="color: MidnightBlue">Home</a></li>
-					<li><a href="bio.html"style="color: MidnightBlue">Bio</a></li>
-					<li><a href="research.html"style="color: MidnightBlue">Research</a></li>
-					<li><a href="publications.html"style="color: MidnightBlue">Publications</a></li>					
-					<li><a href="teaching.html"style="color: MidnightBlue">Teaching</a></li>
+					<li><a href="https://basakguler.github.io/index.html"style="color: MidnightBlue">Home</a></li>
+					<li><a href="https://basakguler.github.io/bio.html"style="color: MidnightBlue">Bio</a></li>
+					<li><a href="https://basakguler.github.io/research.html"style="color: MidnightBlue">Research</a></li>
+					<li><a href="https://basakguler.github.io/publications.html"style="color: MidnightBlue">Publications</a></li>					
+					<li><a href="https://basakguler.github.io/teaching.html"style="color: MidnightBlue">Teaching</a></li>
 				</ul>
 
 			</div> <!-- secondaryNavigation -->		
@@ -71,10 +71,7 @@
 
 		<div style="padding:20px 60px 30px 30px" width="80px">
 		
-<!-- 
-		<p style="text-align:justify">  I am an Assistant Professor in the <a href="https://www.ece.ucr.edu/"> Department of Electrical and Computer Engineering </a> at <a href="https://www.ucr.edu/">University of California, Riverside</a>.
-		</p> 
- -->
+
 
 		<p style="text-align:justify">  I am an Assistant Professor in the Department of Electrical and Computer Engineering  at University of California, Riverside.
 		</p> 
@@ -137,7 +134,7 @@
     <p style="text-align:justify"><font color="purple"><b> May 2020: </b></font>  New paper on communication-efficient secure federated learning: &nbsp;<a href="https://arxiv.org/pdf/2002.04156.pdf">Turbo-Aggregate: Breaking the Quadratic Aggregation Barrier in Secure Federated Learning</a></li>       
 
   <p>
-  <p style="text-align:justify"><font color="purple"><b> May 2020: </b></font>  New paper on distributed graph processing: &nbsp;<a href="BG-TSIPN-20.pdf">TACC: Topology-Aware Coded Computing for Distributed Graph Processing</a></li>
+  <p style="text-align:justify"><font color="purple"><b> May 2020: </b></font>  New paper on distributed graph processing: &nbsp;<a href="https://basakguler.github.io/BG-TSIPN-20.pdf">TACC: Topology-Aware Coded Computing for Distributed Graph Processing</a></li>
   
   <p>  
   <p style="text-align:justify"><font color="purple"><b> April 2020: </b></font>   New paper on privacy-aware distributed machine learning: &nbsp;<a href="https://arxiv.org/pdf/1902.00641.pdf">CodedPrivateML: A Fast and Privacy-Preserving Framework for Distributed Machine Learning</a> </li>       
@@ -146,29 +143,14 @@
 		  
 		<p>
 	
-<!-- 
-		<p style="text-align:justify">   I am also interested in information transfer in networks with social and semantic features, in particular, developing mathematical models of human factors in computing and communication.     
-		<p>        
- -->
 
-<!-- 
-<p style="font-size:large;"><font color="blue"><b>News:<b></font></p>
-<p><font color="coral"><b>April 2016:</b></font> I was invited to <a href="http://www.heidelberg-laureate-forum.org"> 2016 Heidelberg Laureate Forum</a>. </p>
-<p><font color="coral"><b>April 2016:</b></font> I received the Dr. Nirmal K. Bose Dissertation Excellence Award. </p>
-<p><font color="coral"><b>March 2016:</b></font> I received the <a href="http://www.tassausa.org"> Turkish American Scientists and Scholars Association</a> Young Scholar Award. </p>
-<p><font color="coral"><b>November 2015:</b></font> I was invited to the <a href="https://risingstars15-eecs.mit.edu">Rising Stars in Electrical Engineering and Computer Science Workshop</a> at the Massachusetts Institute of Technology. </p>
-<p><font color="coral"><b>October 2015:</b></font> I participated in the <a href="http://ghc.anitaborg.org">Grace Hopper Celebration of Women in Computing</a> as a student scholar. </p>
-<p><font color="coral"><b>June 2015:</b></font>  Passed my PhD Proposal Exam.
- -->
+
 		<p style="font-size:large;"><font color="blue"><b>Contact:</b></font></p>
 
 
 		  <p>I can be reached at bguler at ece dot ucr dot edu </p>
 
-<!-- 
-		  <p> I can be reached at Room EEB 532, Ming Hsieh Department of Electrical Engineering.</p>
-<p><b>Email:</b> bguler at usc dot edu </p>
- -->
+
 
 		</div>		
 
