--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
 		<div id="copy">
 
-		<img src="images/photo-bg.jpg" width="224.56" height="235.44" style="padding:20px; float:right" /></td>
+		<img src="https://basakguler.github.io/images/photo-bg.jpg" width="224.56" height="235.44" style="padding:20px; float:right" /></td>
 
 		<div style="padding:20px 60px 30px 30px" width="80px">
 		
