--- a/research.html
+++ b/research.html
@@ -82,7 +82,7 @@ The global model is then pushed back to the mobile users for inference.
 
 
 
-<p style="text-align:center;"><img src="images/federated5.png" height="190px" style="padding:5px;" />  </p >   
+<p style="text-align:center;"><img src="https://basakguler.github.io/images/federated5.png" height="190px" style="padding:5px;" />  </p >   
 
 
 <p style="text-align:justify">A major bottleneck in scaling federated learning to a large number of users is the overhead of secure model aggregation, which grows quadratically with the number of users. 
@@ -116,7 +116,7 @@ These frameworks keep both the data and the model information-theoretically priv
 while allowing efficient parallelization of training across distributed workers.
 
  </p >
-<p style="text-align:center;"><img src="images/systemv7.png" height="250px" style="padding:5px;" />  </p >   
+<p style="text-align:center;"><img src="https://basakguler.github.io/images/systemv7.png" height="250px" style="padding:5px;" />  </p >   
 
 <p style="text-align:justify"> 
 Due to the typically large volume of data and complexity of models, training is a compute and storage intensive task. Furthermore,  training is often be done on sensitive data, such as healthcare records, browsing history, or financial transactions, which brings important security and privacy implications. This creates a challenging dilemma. On the one hand, due to its complexity, it is often desirable to outsource the training task to more capable computing platforms, such as the cloud. On the other hand, the training dataset is often sensitive and particular care should be taken to protect its privacy against potential breaches in such platforms. This dilemma gives rise to the following problem, how can we offload the training task to a distributed computing platform, while maintaining the privacy of the dataset? 
@@ -158,7 +158,7 @@ Distributed computing provides an effective means of scaling-up large-scale grap
 
 
 
-<p style="text-align:center;"><img src="images/graphproc.png" height="190px" style="padding:5px;" />  </p >   
+<p style="text-align:center;"><img src="https://basakguler.github.io/images/graphproc.png" height="190px" style="padding:5px;" />  </p >   
 
 
 <p style="text-align:justify">However, this also requires extensive communication and coordination between the processors, which can take up to 50% of the overall execution time, making the  </b>inter-processor communication load</b> a major bottleneck in scalability. I design scalable and privacy-aware distributed computing frameworks for large-scale graph and information processing applications, using coding and information theory principles. 
@@ -199,7 +199,7 @@ interacting parties are influenced by side information while interpreting the me
 
 
 </p >
-<p style="text-align:center;"><img src="images/multiuser.png" height="130px" style="padding:5px;" />  </p >   
+<p style="text-align:center;"><img src="https://basakguler.github.io/images/multiuser.png" height="130px" style="padding:5px;" />  </p >   
 
 
 
@@ -240,7 +240,7 @@ In contrast, communication protocols that operate in the physical layer do not t
 These factors together motivate a new approach that molds physical and application layer metrics into one, i.e., a novel performance criterion that takes into account the meanings of the communicated messages. 
 I design mechanisms to achieve this, i.e., how to reliably communicate the meanings of messages through a noisy channel. </p>
 
-<img src="images/semantic.png" height="130px" style="padding:5px;" />     
+<img src="https://basakguler.github.io/images/semantic.png" height="130px" style="padding:5px;" />     
 <br /> 
 <br /> 
 <br />
@@ -271,7 +271,7 @@ An individual with such influence capability can have a significant impact on in
 <p style="text-align:justify"> A heterogeneous wireless network is an environment that consists of cellular base stations of <b>various sizes</b>, <b>coverage areas</b>, and <b>operating protocols</b>. Some of 
 these are installed and maintained by the mobile operator, such as macrocells (cellular towers), while the others are <b>plug-and-play</b> devices installed by the users, such as femtocells. </p>
 
-<center><img src="images/twotier.png" height="130px" style="padding:5px;" align="middle"/>   </center>  
+<center><img src="https://basakguler.github.io/images/twotier.png" height="130px" style="padding:5px;" align="middle"/>   </center>  
 <br /> 
 <br /> 
 
