--- a/index.html
+++ b/index.html
@@ -101,6 +101,8 @@
 		<p style="font-size:large;"><font color="blue"><b>News:</b></font></p>
 
 
+	<p style="text-align:justify"><font color="purple"><b> Aug 2021: </b></font> I will be serving as a TPC member for <a href="https://wcnc2022.ieee-wcnc.org">WCNC 2022</a>, submission deadline Sep 15! </p>
+	
 
 	<p style="text-align:justify"><font color="purple"><b> July 2021: </b></font> Received the UCR Regents' Faculty Fellowship!</p>
 		
