--- a/index.html
+++ b/index.html
@@ -100,8 +100,13 @@
 		
 		<p style="font-size:large;"><font color="blue"><b>News:</b></font></p>
 
+	<p style="text-align:justify"><font color="purple"><b> Oct 2021: </b></font> New paper on <a href="https://arxiv.org/abs/2110.02177"> asynchronous federated learning</a>! Preliminary version to appear at <a href="https://nips.cc/Conferences/2021/Schedule?showEvent=21829"> NeurIPS Workshop on Federated Learning: New Challenges on Privacy, Fairness, Robustness, Personalization and Data Ownership</a>.</p>
 
-	<p style="text-align:justify"><font color="purple"><b> Aug 2021: </b></font> I will be serving as a TPC member for <a href="https://wcnc2022.ieee-wcnc.org">WCNC 2022</a>, submission deadline Sep 15! </p>
+
+	<p style="text-align:justify"><font color="purple"><b> Sep 2021: </b></font> Serving as a TPC member for <a href="https://www.isit2022.org/"> IEEE International Symposium on Information Theory (ISIT 2022)</a>, submission deadline Jan 15, 2022! </p>
+
+
+	<p style="text-align:justify"><font color="purple"><b> Aug 2021: </b></font> Serving as a TPC member for <a href="https://wcnc2022.ieee-wcnc.org"> IEEE Wireless Communications and Networking Conference (WCNC 2022)</a>, submission deadline Oct 15, 2022! </p>
 	
 
 	<p style="text-align:justify"><font color="purple"><b> July 2021: </b></font> Received the UCR Regents' Faculty Fellowship!</p>
