--- a/publications.html
+++ b/publications.html
@@ -76,6 +76,12 @@
  <h1>Preprints/Recent Publications</h1>
  <ol>
 
+
+
+   <li> Jinhyun So, Ramy E. Ali, Basak Guler, A. Salman Avestimehr,<a href="https://arxiv.org/abs/2110.02177"> Secure Aggregation for Buffered Asynchronous Federated Learning</a>, NeurIPS Workshop on Federated Learning: New Challenges on Privacy, Fairness, Robustness, Personalization and Data Ownership, 2021. </li>       
+  <br />
+
+
    <li> Jinhyun So, Ramy E. Ali, Basak Guler, Jiantao Jiao, A. Salman Avestimehr, <a href="https://arxiv.org/pdf/2106.03328.pdf">Securing Secure Aggregation: Mitigating Multi-Round Privacy Leakage in Federated Learning</a>, 2021. </li>       
   <br />
 
@@ -86,11 +92,6 @@
    <li> Basak Guler, Aylin Yener, <a href="https://arxiv.org/pdf/2102.11274.pdf">A Framework for Sustainable Federated Learning</a>, International Symposium on Modeling and Optimization in Mobile, Ad hoc, and Wireless Networks (WiOpt), 2021. </li>       
   <br />
 
-   <li> Jinhyun So, Basak Guler, A. Salman Avestimehr, <a href="https://arxiv.org/abs/2007.11115">BREA: Byzantine-Resilient Secure Federated Learning</a>, IEEE Journal in Selected Areas in Communications: Machine Learning in Communications and Networks, 2020. </li>       
-  <br />
-
-  <li> Jinhyun So, Basak Guler, A. Salman Avestimehr, <a href="https://papers.nips.cc/paper/2020/file/5bf8aaef51c6e0d363cbe554acaf3f20-Paper.pdf">A Scalable Approach for Privacy-Preserving Collaborative Machine Learning</a>, Conference on Neural Information Processing Systems (NeurIPS 2020). </li>       
-  <br />
    
    <li> Jinhyun So, Basak Guler, A. Salman Avestimehr, <a href="https://arxiv.org/pdf/2002.04156.pdf">Turbo-Aggregate: Breaking the Quadratic Aggregation Barrier in Secure Federated Learning</a>, IEEE Journal on Selected Areas in Information Theory: Privacy and Security of Information Systems, 2021. </li>       
   <br />
@@ -149,6 +150,9 @@
                      
   <h1>Conference Publications</h1>
           <ol>
+
+   <li> Jinhyun So, Ramy E. Ali, Basak Guler, A. Salman Avestimehr,<a href="https://arxiv.org/abs/2110.02177"> Secure Aggregation for Buffered Asynchronous Federated Learning</a>, NeurIPS Workshop on Federated Learning: New Challenges on Privacy, Fairness, Robustness, Personalization and Data Ownership, 2021. </li>       
+  <br />
 
 
 
