--- a/group.html
+++ b/group.html
@@ -78,15 +78,24 @@
 		<h1> <b> PhD Students: </b> </h1>
 		<br />	
 		
-		<p style="text-align:justify;margin-bottom:1cm"> Hasin Us Sami (Electrical and Computer Engineering) </p>
-		
+		<p style="text-align:justify;margin-bottom:0.5cm"> Hasin Us Sami (Electrical and Computer Engineering) </p>
 
-		
-		<p style="text-align:justify;margin-bottom:1cm"> Irem Ergun (Computer Science and Engineering) </p>
-		
-		
+		<img src="https://basakguler.github.io/images/photo-HUS.jpg" width="124.56"  " />
 
 
+	    <p  </p>
+	    &nbsp
+
+
+		
+		<p style="text-align:justify;margin-bottom:1cm"> <a href="https://www.cs.ucr.edu/~iergu001/"> Irem Ergun </a> (Computer Science and Engineering) </p>
+		
+		
+		<img src="https://basakguler.github.io/images/photo-IE.jpg" width="124.56"  " />
+
+
+	    <p  </p>
+	    &nbsp
 
 		<p style="text-align:justify;margin-bottom:1.5cm"> Yushu Yan (Electrical and Computer Engineering) </p>
 		
