--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 		
 
 		
-		<p style="text-align:justify">   My research is on developing scalable, privacy-preserving, and context-aware information processing frameworks for large-scale distributed networks. 
+		<p style="text-align:justify">   My research is on distributed and federated learning, secure, private and trustworthy information processing  in large-scale networks. 
 		</p>
  
 
@@ -91,7 +91,7 @@
 	
 		<p style="text-align:justify"> 
 		
-		I am always interested in working with motivated students who would like to pursue research in one or more of the following areas (potentially, the intersection of), information theory, machine learning, privacy and security, wireless networks, distributed computing, and communications. 
+		I am always interested in working with motivated students who would like to pursue research in one or more of the following areas (potentially, the intersection of), information theory, distributed and federated machine learning, privacy and security, wireless networks, distributed computing, and communications. 
 
 </p>
 <p> My research typically involves both  theoretical and implementation components, which requires a strong mathematical background. 
@@ -99,6 +99,17 @@
 		</p>
 		
 		<p style="font-size:large;"><font color="blue"><b>News:</b></font></p>
+
+
+	<p style="text-align:justify"><font color="purple"><b> Feb 2022: </b></font> Received an  <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2144927&HistoricalAwards=false"> NSF CAREER Award </a> on privacy-preserving collaborative learning!  </p>
+
+
+
+	<p style="text-align:justify"><font color="purple"><b> Jan 2022: </b></font> Our paper Over-the Air Clustered Federated Learning has been accepted to International Conference on Acoustics, Speech, and Signal Processing (ICASSP 2022). Congratulations Hasin! </p>
+
+
+	<p style="text-align:justify"><font color="purple"><b> Dec 2021: </b></font> New paper on <a href="https://arxiv.org/abs/2112.12872"> privacy-preserving federated learning!</a> with Irem and Hasin. TLDR: We introduce a sparse communication framework for speeding up secure aggregation. </p>
+
 
 	<p style="text-align:justify"><font color="purple"><b> Oct 2021: </b></font> New paper on <a href="https://arxiv.org/abs/2110.02177"> asynchronous federated learning</a>! Preliminary version to appear at <a href="https://nips.cc/Conferences/2021/Schedule?showEvent=21829"> NeurIPS Workshop on Federated Learning: New Challenges on Privacy, Fairness, Robustness, Personalization and Data Ownership</a>.</p>
 
