--- a/research.html
+++ b/research.html
@@ -73,7 +73,7 @@
 
 
 
-<h1><b> Machine Learning in Wireless Networks, Federated Learning </b></h1>
+<h1><b> Distributed Machine Learning, Federated Learning, Machine Learning in Wireless Networks </b></h1>
 <br />
 <p style="text-align:justify"> 
 Federated learning is a distributed learning framework that allows machine learning in mobile environments, while protecting user privacy and providing robustness against user dropouts. 
@@ -109,7 +109,7 @@ Our experiments demonstrate that Turbo-aggregate achieves a total running time t
 
 
 
-<h1><b> Privacy-preserving Distributed Machine Learning </b></h1>
+<h1><b> Secure and Privacy-preserving Machine Learning </b></h1>
 <br />
 <p style="text-align:justify"> 
 How to train a machine learning model in a distributed network while keeping the data private and secure? 
