--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 		
 
 		
-		<p style="text-align:justify">   My research is on distributed and federated learning, secure, private and trustworthy information processing  in large-scale networks. 
+		<p style="text-align:justify">   My research is on distributed and federated learning, and secure, private and trustworthy information processing  in large-scale networks. 
 		</p>
  
 
@@ -101,7 +101,7 @@
 		<p style="font-size:large;"><font color="blue"><b>News:</b></font></p>
 
 
-	<p style="text-align:justify"><font color="purple"><b> Feb 2022: </b></font> Received an  <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2144927&HistoricalAwards=false"> NSF CAREER Award </a> on privacy-preserving collaborative learning!  </p>
+	<p style="text-align:justify"><font color="purple"><b> Feb 2022: </b></font> Received an  <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2144927&HistoricalAwards=false"> NSF CAREER Award! </a>  </p>
 
 
 
