--- a/group.html
+++ b/group.html
@@ -78,9 +78,9 @@
 		<h1> <b> PhD Students: </b> </h1>
 		<br />	
 		
-		<p style="text-align:justify;margin-bottom:0.5cm"> Hasin Us Sami (Electrical and Computer Engineering) </p>
+		<p style="text-align:justify;margin-bottom:0.2cm"> Hasin Us Sami (Electrical and Computer Engineering) </p>
 
-		<img src="https://basakguler.github.io/images/photo-HUS.jpg" width="124.56"  " />
+		<img src="https://basakguler.github.io/images/photo-HUS.jpg" height="150"   " />
 
 
 	    <p  </p>
@@ -88,10 +88,10 @@
 
 
 		
-		<p style="text-align:justify;margin-bottom:1cm"> <a href="https://www.cs.ucr.edu/~iergu001/"> Irem Ergun </a> (Computer Science and Engineering) </p>
+		<p style="text-align:justify;margin-bottom:0.2cm"> <a href="https://www.cs.ucr.edu/~iergu001/"> Irem Ergun </a> (Computer Science and Engineering) </p>
 		
 		
-		<img src="https://basakguler.github.io/images/photo-IE.jpg" width="124.56"  " />
+		<img src="https://basakguler.github.io/images/photo-IE.jpg" height="150" " />
 
 
 	    <p  </p>
