--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 		
 
 		
-		<p style="text-align:justify">   My research is on distributed and federated learning, and secure, private and trustworthy information processing  in large-scale networks. 
+		<p style="text-align:justify">   My research is on distributed and federated learning, secure, private and trustworthy information processing  in large-scale networks. 
 		</p>
  
 
